Modify social links for GitHub and add Overleaf
Updated GitHub URL and added Overleaf social link.

--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,7 +10,7 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://albert-mi.github.io/"
 
 [social.params]
 icon = "brand-github"
@@ -22,3 +22,11 @@ url = "https://twitter.com"
 
 [social.params]
 icon = "brand-twitter"
+
+[[Overleaf]]
+identifier = "Overleaf"
+name = "Overleaf"
+url = "https://www.overleaf.com/project"
+
+[social.params]
+icon = "brand-Overleaf"
