--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -27,7 +27,7 @@ avatarShape = "circle"                 # "circle" 或 "square"
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/small.png"
+src = "img/smail.png"
 
 # -------- 文章区设置 --------
 [article]
