--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -77,6 +77,9 @@ src = ""
 [params.math]
 enable = true
 
+[params]
+  customCSS = ["css/custom.css"]
+
 # -------- 颜色/主题 --------
 [colorScheme]
 toggle = true
