--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -77,8 +77,9 @@ src = ""
 [params.math]
 enable = true
 
-[params]
-  customCSS = ["/css/custom.css"]
+[params.assets]
+    favicon = "favicon.ico"  # 如果有的话保留
+    customCSS = ["css/custom.css"]  # 添加这行
 
 # -------- 颜色/主题 --------
 [colorScheme]
