--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -47,6 +47,18 @@ icon = "brand-twitter"  # 官方 Twitter 图标
 # [main.params]
 # icon = "home"
 
+# 个人简历
+[[main]]
+name   = "About me"
+url    = "/about/"
+weight = 1
+# Small inline SVG logo (a simple user avatar). You can replace with your own.
+pre = """<svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+xmlns="http://www.w3.org/2000/svg" style="vertical-align:-3px;margin-right:8px;">
+<path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.418 0-8 2.239-8 5v1h16v-1c0-2.761-3.582-5-8-5Z"
+stroke="currentColor" stroke-width="1.5" fill="none"/></svg>"""
+
+
 # 书签页（Bookmarks）
 [[main]]
 identifier = "bookmarks"
