--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -52,6 +52,9 @@ icon = "brand-twitter"  # 官方 Twitter 图标
 name   = "About me"
 url    = "/about/"
 weight = 1
+# Stack expects an icon name; we'll add assets/icons/user.svg below.
+[main.params]
+icon = "user"
 
 
 # 书签页（Bookmarks）
