--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -47,15 +47,6 @@ icon = "brand-twitter"  # 官方 Twitter 图标
 # [main.params]
 # icon = "home"
 
-# 个人简历
-# [[main]]
-# name   = "About me"
-# url    = "/about/"
-# weight = 1
-# Stack expects an icon name; we'll add assets/icons/user.svg below.
-# [main.params]
-# icon = "user"
-
 
 # 书签页（Bookmarks）
 [[main]]
@@ -86,3 +77,12 @@ weight = 4
 
 [main.params]
 icon = "search"
+
+个人简历
+[[main]]
+name   = "About me"
+url    = "/about/"
+# weight = 1
+# Stack expects an icon name; we'll add assets/icons/user.svg below.
+[main.params]
+icon = "user"
