--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 0.123.8
+          hugo-version: "latest"  # Change from 0.123.8
           extended: true
 
       - name: Update theme
